chore(slack): refactor to records